<resources>
    <string name="app_name">Turtle Budget</string>
    <string name="view_expense">View Expense</string>
    <string name="add_button">Add</string>
    <string name="date_input">01/01/2022</string>
    <string name="date1_input">01/01/2022</string>
    <string name="amount_bill">Amount</string>
    <string name="amount_paycheck">Amount</string>
    <string name="job">Job</string>
    <string name="bill_title">Bill Title</string>
    <string name="adjust_btn">GOALS</string>
    <string name="recommend_btn">RECOMMENDATIONS</string>
    <string name="percent_hint">%</string>
    <string name="max_hint">$</string>
    <string name="notification_achievement">Congrats! New level reached!</string>
    <string-array name="recurring_options">
        <item>Not Recurring</item>
        <item>Monthly</item>
        <item>Annually</item>
    </string-array>
</resources>