<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="false">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@color/light_grey">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp"
        android:background="@drawable/layout_bg">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/layout_bg">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Add Paycheck"
                android:textColor="@color/black"
                android:textSize="32sp"
                android:layout_margin="10dp">
            </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/layout_bg">
            <EditText
                android:id="@+id/job_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/job"
                android:layout_margin="5dp">
            </EditText>
            <EditText
                android:id="@+id/paycheck_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:text="@string/amount_paycheck"
                android:layout_margin="5dp">
            </EditText>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="5dp">

                <TextView
                    android:id="@+id/date_input"
                    android:layout_width="230dp"
                    android:layout_height="wrap_content"
                    android:text="@string/date_input"
                    android:textSize="20dp"
                    android:layout_gravity="center"
                    android:padding="6dp"/>

                <Button
                    android:id="@+id/date_picker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="DATE"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/dark_green">
                </Button>
            </LinearLayout>


            <Button
                android:id="@+id/add_paycheck_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_button"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:backgroundTint="@color/dark_green">
            </Button>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp"
        android:background="@drawable/layout_bg">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/layout_bg">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Add Bills"
                android:textColor="@color/black"
                android:textSize="32sp"
                android:layout_margin="10dp">
            </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/layout_bg">
            <EditText
                android:id="@+id/bill_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bill_title"
                android:layout_margin="5dp">
            </EditText>
            <EditText
                android:id="@+id/bill_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/amount_bill"
                android:layout_margin="5dp">
            </EditText>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="5dp">

                <TextView
                    android:id="@+id/date1_input"
                    android:layout_width="230dp"
                    android:layout_height="wrap_content"
                    android:text="@string/date1_input"
                    android:textSize="20dp"
                    android:layout_gravity="center"
                    android:padding="6dp"
                    />

                <Button
                    android:id="@+id/date1_picker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="DATE"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/dark_green">
                </Button>
            </LinearLayout>
            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown"/>
            <Button
                android:id="@+id/add_bill_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Add"
                android:backgroundTint="@color/dark_green"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">
            </Button>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
</ScrollView>